<resources>
    <string name="app_name">SALUDINTEGRAL</string>
    <string name="btn_agenda">Agenda</string>
    <string name="btn_history">Historial</string>
    <string name="btn_sudoku">Sudoku</string>
    <string name="btn_plan">Plan salud integral</string>
    <string name="action_settings">Settings</string>
    <string name="missing_information_save_event">Falta información</string>
    <string name="today">Hoy</string>
    <string name="tomorrow">Mañana</string>
    <string name="btn_save">Guardar</string>
    <string name="hint_input_title">Título</string>
    <string name="hint_input_name">Nombre</string>
    <string name="repeats">Repetición:</string>
    <string name="input_detailed_information">Información detallada</string>
    <string name="saving_events">Guardando evento</string>
    <string name="final_date">Hasta: </string>
    <string name="s_alimentos1">- Pollo \n- Arroz \n- Papa\n- Tomate\n- Kiwi \n</string>
    <string name="s_alimentos2">- Pavo \n- Pan \n- Lechuga \n- Manzana \n- Tomar 2L de agua/día\n</string>
    <string name="s_ejercicios1">- Caminata \n- Nadar \n- Pararse en 1 pie 10 seg \n- Bicicleta \n- Caminar de Talón a Dedos\n</string>
    <string name="s_ejercicios2">- Ej. Equilibrio \n- Estirar \n- Bailar \n- Bandas Elásticas \n- Pesas \n</string>
    <string name="s_mental1">- Sudoku \n- Leer \n- Sumas y Restas \n- Crucigramas \n- Memorama \n</string>
    <string name="s_mental2">- Pictionary \n- Videojuegos \n- Adivina el animal \n- Acertijos \n-  Formar palabras aleatorias\n</string>
    <string name="no_events">No hay eventos para mostrar, presiona el botón de abajo en la vista de agenda para agregar un evento.</string>

    <string-array name="spinner_repeat">
        <item>Único</item>
        <item>Diario</item>
        <item>Semanal</item>
        <item>Mensual</item>
    </string-array>
    <string-array name="spinner_type">
        <item>General</item>
        <item>Medicamentos</item>
        <item>Alimentos</item>
        <item>Actividad Física</item>
    </string-array>
    <string-array name="spinner_search_type">
        <item>Todos</item>
        <item>General</item>
        <item>Medicamentos</item>
        <item>Alimentos</item>
        <item>Actividad Física</item>
    </string-array>
    <string name="ConfirmMessage">Usted está seguro/a?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="alimentos">Alimentos</string>
    <string name="addevent">+Evento</string>
    <string name="salud_fisica">Salud Física</string>
    <string name="salud_mental">Salud Mental</string>
    <string name="type">Tipo:</string>
    <string name="search">Buscar:</string>
    <string name="modify">Modificar</string>
    <string name="delete">Borrar</string>
    <string name="ok">Ok</string>
    <string name="regresar">Regresar</string>
</resources>
