<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="itesm.mx.saludintegral.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/TituloAlimento"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:text="@string/alimentos"
                    android:textSize="24sp" />
                <Button
                    android:id="@+id/btn_alimentos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/addevent" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_Alimentos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/s_alimentos1" />

                    <TextView
                        android:id="@+id/tv_Alimentos2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/s_alimentos2" />

                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/TituloEjercicios"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="Salud Fisica"
                android:textSize="20dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_Ejercicios"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:text="@string/s_ejercicios1" />

                    <TextView
                        android:id="@+id/tv_Ejercicios2"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:text="@string/s_ejercicios2" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_ejercicios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="+Evento" />
            </RelativeLayout>

            <TextView
                android:id="@+id/TituloMental"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="Salud Mental"
                android:textSize="20dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_Mentales1"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:text="@string/s_mental1" />

                    <TextView
                        android:id="@+id/tv_Mentales2"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:text="@string/s_mental2" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
